[gd_scene load_steps=23 format=2]

[ext_resource path="res://Nodes/Map/ZIndexer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Buildings/Reactor/Smoke_1.png" type="Texture2D" id=2]
[ext_resource path="res://Nodes/Objects/Deco/Sea_flower/DeathParticles.png" type="Texture2D" id=3]
[ext_resource path="res://Nodes/Objects/Deco/Sea_flower/body_001.png" type="Texture2D" id=4]
[ext_resource path="res://Nodes/Objects/Deco/Sea_flower/roots_.png" type="Texture2D" id=5]
[ext_resource path="res://Nodes/Objects/Deco/Sea_flower/roots_001.png" type="Texture2D" id=6]
[ext_resource path="res://Nodes/Objects/Deco/UniversalDeco/UniversalDeco.gd" type="Script" id=7]
[ext_resource path="res://SFX/Enemies/Frog/wednesday_2.wav" type="AudioStream" id=8]

[sub_resource type="Shader" id=55]
code = "shader_type canvas_item;
uniform mat4 global_transform;
varying vec2 global_position;

uniform float kicked_time=0.0;
uniform float move_mod=1.0;
uniform float move_speed=1.0;
uniform vec4 emision_mask_color :source_color =vec4(0.0,1.0,0.0,1.0);
uniform vec4 emision_color=vec4(0.0,3.5,0.0,1.0);
uniform float emision_threshold=0.2;

// NOTE: Shader automatically converted from Godot Engine 3.4.rc's CanvasItemMaterial.

uniform int particles_anim_h_frames;
uniform int particles_anim_v_frames;
uniform bool particles_anim_loop;

void vertex() {
	mat4 glo = global_transform;
	mat2 ddd = mat2(glo);
	// TODO
	//global_position = (EXTRA_MATRIX * glo * vec4(VERTEX, 0.0, 1.0)).xy;
}

void fragment() {
	
	//float kicked= 5.0*clamp(1.0-pow(fract(TIME*0.5)*3.0,0.1),0.0,1.0);
	float kicked= 5.0*clamp(0.5-abs(0.5-pow(kicked_time*0.5,0.1)),0.0,1.0);
	float tim=move_speed*TIME;
	COLOR = texture(TEXTURE, UV + vec2(sin(tim+UV.x*(10.0)+kicked*2.0*sin(tim)),cos(tim+UV.y*(7.0)-kicked*3.0*sin(tim*2.0))) * (0.03+kicked*0.04)*(1.0-
	8.0*distance(UV,vec2(0.5)))*move_mod);
	COLOR=COLOR+max(COLOR*emision_mask_color-vec4(emision_threshold),vec4(0.0))*emision_color;
}"

[sub_resource type="ShaderMaterial" id=61]
shader = SubResource( 55 )
shader_param/global_transform = null
shader_param/kicked_time = 0.0
shader_param/move_mod = 0.238
shader_param/move_speed = 1.0
shader_param/emision_mask_color = Color( 0.301961, 0.309804, 0.231373, 1 )
shader_param/emision_color = Plane( 21.125, 20, 300, 0 )
shader_param/emision_threshold = 0.13
shader_param/particles_anim_h_frames = null
shader_param/particles_anim_v_frames = null
shader_param/particles_anim_loop = null

[sub_resource type="CircleShape2D" id=64]
radius = 103.17

[sub_resource type="Animation" id=70]
resource_name = "Nowa animacja"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Body001:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5, 1, 1.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 2.61114 ), Vector2( 1.98264, 0.516845 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=71]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Roots001:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Body001:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CanvasItemMaterial" id=62]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 3
particles_anim_loop = true

[sub_resource type="Curve" id=63]
_data = [ Vector2( 0, 0.0935583 ), 0.0, 0.417178, 0, 1, Vector2( 1, 0.510736 ), 0.417178, 0.0, 1, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PackedFloat32Array( 0, 0.399573, 0.67735, 1 )
colors = PackedColorArray( 0.74902, 0.74902, 0.74902, 0.352941, 0.564706, 0.564706, 0.564706, 0.454902, 1, 1, 1, 0.494118, 1, 1, 1, 0 )

[sub_resource type="CanvasItemMaterial" id=66]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=68]
offsets = PackedFloat32Array( 0.909434, 1 )
colors = PackedColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=69]
gradient = SubResource( 68 )

[sub_resource type="ParticleProcessMaterial" id=67]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.54
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 300.0
angle = 720.0
angle_random = 1.0
color_ramp = SubResource( 69 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Animation" id=72]
resource_name = "Nowa animacja"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 1.5, 2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=73]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Template" type="Node2D"]
scale = Vector2( 0.2, 0.2 )
z_index = 700
z_as_relative = false
script = ExtResource( 7 )
max_hp = 8

[node name="Roots" type="Sprite2D" parent="."]
z_index = -500
z_as_relative = false
texture = ExtResource( 5 )

[node name="ZIndexer" parent="Roots" instance=ExtResource( 1 )]
z_index = -500

[node name="Roots001" type="Sprite2D" parent="."]
rotation = 2.09439
z_index = -500
z_as_relative = false
texture = ExtResource( 6 )

[node name="ZIndexer" parent="Roots001" instance=ExtResource( 1 )]
z_index = -500

[node name="Body001" type="Sprite2D" parent="."]
material = SubResource( 61 )
z_index = 92
texture = ExtResource( 4 )

[node name="ZIndexer" parent="." instance=ExtResource( 1 )]
z_index = 700

[node name="Collider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 64 )

[node name="OnHit" type="Node2D" parent="."]

[node name="AudioGroup" type="Node" parent="OnHit"]
__meta__ = {
"_editor_description_": "gore_audio"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="OnHit"]
playback_speed = 8.0
"anims/Nowa animacja" = SubResource( 70 )
anims/RESET = SubResource( 71 )

[node name="OnDead" type="Node2D" parent="."]

[node name="Smoke" type="CPUParticles2D" parent="OnDead"]
modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 62 )
position = Vector2( 80.7441, -79.6777 )
scale = Vector2( 4, 4 )
z_index = 92
amount = 6
lifetime = 5.0
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
angular_velocity = 78.7
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_curve = SubResource( 63 )
color_ramp = SubResource( 3 )

[node name="Smoke2" type="CPUParticles2D" parent="OnDead"]
modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 62 )
position = Vector2( 0.0957031, -106.932 )
scale = Vector2( 4, 4 )
z_index = 92
amount = 6
lifetime = 5.0
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
angular_velocity = 78.7
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_curve = SubResource( 63 )
color_ramp = SubResource( 3 )

[node name="Smoke3" type="CPUParticles2D" parent="OnDead"]
modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 62 )
position = Vector2( -44.4004, -9.59961 )
scale = Vector2( 4, 4 )
z_index = 92
amount = 6
lifetime = 5.0
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
angular_velocity = 78.7
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_curve = SubResource( 63 )
color_ramp = SubResource( 3 )

[node name="Smoke4" type="CPUParticles2D" parent="OnDead"]
modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 62 )
position = Vector2( -32.7207, 40.457 )
scale = Vector2( 4, 4 )
z_index = 92
amount = 6
lifetime = 5.0
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
angular_velocity = 78.7
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_curve = SubResource( 63 )
color_ramp = SubResource( 3 )

[node name="Smoke5" type="CPUParticles2D" parent="OnDead"]
modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 62 )
position = Vector2( 0.0957031, 93.293 )
scale = Vector2( 4, 4 )
z_index = 92
amount = 6
lifetime = 5.0
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
angular_velocity = 78.7
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_curve = SubResource( 63 )
color_ramp = SubResource( 3 )

[node name="Smoke6" type="CPUParticles2D" parent="OnDead"]
modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 62 )
position = Vector2( 61.834, 70.4902 )
scale = Vector2( 4, 4 )
z_index = 92
amount = 6
lifetime = 5.0
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
angular_velocity = 78.7
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_curve = SubResource( 63 )
color_ramp = SubResource( 3 )

[node name="Smoke7" type="CPUParticles2D" parent="OnDead"]
modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 62 )
position = Vector2( 71.2891, 7.64258 )
scale = Vector2( 4, 4 )
z_index = 92
amount = 6
lifetime = 5.0
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
angular_velocity = 78.7
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_curve = SubResource( 63 )
color_ramp = SubResource( 3 )

[node name="Smoke8" type="CPUParticles2D" parent="OnDead"]
modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 62 )
position = Vector2( 25.127, -38.5195 )
scale = Vector2( 4, 4 )
z_index = 92
amount = 6
lifetime = 5.0
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
angular_velocity = 78.7
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_curve = SubResource( 63 )
color_ramp = SubResource( 3 )

[node name="Smoke9" type="CPUParticles2D" parent="OnDead"]
modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 62 )
position = Vector2( -59.9707, -67.4414 )
scale = Vector2( 4, 4 )
z_index = 92
amount = 6
lifetime = 5.0
draw_order = 1
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
angular_velocity = 78.7
angular_velocity_random = 1.0
scale_amount = 0.1
scale_amount_curve = SubResource( 63 )
color_ramp = SubResource( 3 )

[node name="GPUParticles2D" type="GPUParticles2D" parent="OnDead"]
material = SubResource( 66 )
z_index = -500
z_as_relative = false
emitting = false
amount = 14
lifetime = 10.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 67 )
texture = ExtResource( 3 )

[node name="ZIndexer" parent="OnDead/GPUParticles2D" instance=ExtResource( 1 )]
z_index = -500

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="OnDead"]
stream = ExtResource( 8 )
max_distance = 500.0
attenuation = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="OnDead"]
"anims/Nowa animacja" = SubResource( 72 )
anims/RESET = SubResource( 73 )

[connection signal="died" from="." to="Body001" method="hide"]
[connection signal="animation_finished" from="OnDead/AnimationPlayer" to="." method="free_on_animation"]
